[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Game Assets/Mushroom_Man.png" type="Texture" id=2]
[ext_resource path="res://Game Assets/Mushroom_Man_Jump.png" type="Texture" id=3]
[ext_resource path="res://Game Assets/Mushroom_Man_Run.png" type="Texture" id=4]
[ext_resource path="res://Game Assets/layer1.png" type="Texture" id=5]
[ext_resource path="res://Game Assets/layer2.png" type="Texture" id=6]
[ext_resource path="res://Game Assets/layer3.png" type="Texture" id=7]
[ext_resource path="res://Game Assets/layer4.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.95, 0.95 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.36604 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 2 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 20.6817
height = 129.821

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 84.8887, 32.445 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 363.027, 208.911 )
scale = Vector2( 0.996642, 0.996642 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Jump = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DashRecharge" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
editor/display_folded = true
current = true
zoom = Vector2( 1.3, 1.3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera2D"]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
modulate = Color( 0.584314, 0.584314, 0.584314, 1 )
motion_scale = Vector2( 0.125, 1 )
motion_mirroring = Vector2( 2048, 2048 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
modulate = Color( 0.360784, 0.317647, 0.317647, 1 )
motion_scale = Vector2( 0.25, 1 )
motion_offset = Vector2( 0, -2000 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer2"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
modulate = Color( 0.282353, 0.278431, 0.278431, 1 )
motion_scale = Vector2( 0.5, 1 )
motion_offset = Vector2( 0, -1800 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer3"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Camera2D/ParallaxBackground"]
modulate = Color( 0.4, 0.4, 0.4, 1 )
motion_scale = Vector2( 0.8, 1 )
motion_offset = Vector2( 0, -1600 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="Camera2D/ParallaxBackground/ParallaxLayer4"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 8 )

[node name="BodyCollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -5.1507, 2.06028 )
shape = SubResource( 4 )

[node name="HeadCollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -3.99582, -52.1243 )
shape = SubResource( 5 )
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashRecharge" to="." method="_on_DashRecharge_timeout"]
